Resolve assertion by removing unnecessary code b=326875 r+sr=bz