content/xul/document/src/nsXULControllers.h
@@ -52,9 +52,6 @@
 #include "nsISupportsArray.h"
 #include "nsISecurityCheckedComponent.h"
 
-class nsIDOMXULCommandDispatcher;
-
-
 /* non-XPCOM class for holding controllers and their IDs */
 class nsXULControllerData
 {
@@ -102,7 +99,6 @@ protected:
     void        DeleteControllers();
 
     nsVoidArray mControllers;
-    nsWeakPtr mCommandDispatcher;
     PRUint32    mCurControllerID;
 };
 
